--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ social: # jekyll-seo-tag > social overrides
   # extensions: ["strikethrough", "autolink", "table"]
 
 # 4. Jekyll settings
-sass:
-  style: compressed # Style compression
+# sass:
+#   style: compressed # Style compression
 permalink: pretty  # Permalink style (/YYYY/MM/DD/page-name/)
 excerpt_separator: <!-- more --> # Marks end of excerpt in posts
 timezone: Europe/London # Timezone for blog posts and alike
