--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,17 @@
 # 9. Site navigation
 
 # 1. Files excluded from Jekyll builds
-exclude:
-- README.md
-- CODE_OF_CONDUCT.md
-- CONTRIBUTING.md
-- screenshot.png
-- LICENSE
-- CNAME
-- Gemfile
-- Gemfile.lock
-- alembic-jekyll-theme.gemspec
-- .jekyll-cache
+# exclude:
+# - README.md
+# - CODE_OF_CONDUCT.md
+# - CONTRIBUTING.md
+# - screenshot.png
+# - LICENSE
+# - CNAME
+# - Gemfile
+# - Gemfile.lock
+# - alembic-jekyll-theme.gemspec
+# - .jekyll-cache
 
 # 2. Installed Gems
 plugins:
@@ -36,19 +36,19 @@ plugins:
 - jemoji
 
 # 3. Gem settings
-paginate: 2 # jekyll-paginate > items per page
-paginate_path: blog/page:num # jekyll-paginate > blog page
-jekyll-mentions: https://twitter.com # jekyll-mentions > service used when @replying
-twitter:
-  username: DavidDarnes # jekyll-seo-tag > Owners twitter username
-author: DavidDarnes # jekyll-seo-tag > default author
-social: # jekyll-seo-tag > social overrides
-  name: David Darnes # jekyll-seo-tag > real name
-  links:  # jekyll-seo-tag > social aliases (sameAs)
-    - https://twitter.com/DavidDarnes
-    - https://www.facebook.com/daviddarnes
-    - https://www.linkedin.com/in/daviddarnes
-    - https://github.com/daviddarnes
+# paginate: 2 # jekyll-paginate > items per page
+# paginate_path: blog/page:num # jekyll-paginate > blog page
+# jekyll-mentions: https://twitter.com # jekyll-mentions > service used when @replying
+# twitter:
+#   username: DavidDarnes # jekyll-seo-tag > Owners twitter username
+# author: DavidDarnes # jekyll-seo-tag > default author
+# social: # jekyll-seo-tag > social overrides
+#   name: David Darnes # jekyll-seo-tag > real name
+#   links:  # jekyll-seo-tag > social aliases (sameAs)
+#     - https://twitter.com/DavidDarnes
+#     - https://www.facebook.com/daviddarnes
+#     - https://www.linkedin.com/in/daviddarnes
+#     - https://github.com/daviddarnes
 # markdown: CommonMark # Markdown parse settings, CommonMark performs slightly better an others in build time
 # commonmark:
   # options: ["SMART", "FOOTNOTES"]
@@ -57,9 +57,9 @@ social: # jekyll-seo-tag > social overrides
 # 4. Jekyll settings
 # sass:
 #   style: compressed # Style compression
-permalink: pretty  # Permalink style (/YYYY/MM/DD/page-name/)
-excerpt_separator: <!-- more --> # Marks end of excerpt in posts
-timezone: Europe/London # Timezone for blog posts and alike
+# permalink: pretty  # Permalink style (/YYYY/MM/DD/page-name/)
+# excerpt_separator: <!-- more --> # Marks end of excerpt in posts
+# timezone: Europe/London # Timezone for blog posts and alike
 
 # 5. Collections
 collections:
@@ -86,8 +86,8 @@ title: "IT third year website" # Site name or title, also used in jekyll-seo-tag
 description: "This site contains study materials and time table " # Site description and default description, also used in jekyll-seo-tag
 url: "https://alembic.darn.es" # Site url, also used in jekyll-seo-tag
 baseurl: "/thirdyear/"
-repo: "https://github.com/daviddarnes/alembic"
-email: "me@daviddarnes.com"
+# repo: "https://github.com/daviddarnes/alembic"
+# email: "me@daviddarnes.com"
 # disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
 # google_analytics: ''
 # google_analytics_anonymize_ip: ''
@@ -114,7 +114,7 @@ navigation_footer:
 - title: Created by a student
   url: itssrj98
 
-social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
+# social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
 
 
-sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
+# sharing_links: # Appear at the bottom of single blog posts, add as desired. The value can be 'true' or the desired button colour
