--- a/_config.yml
+++ b/_config.yml
@@ -10,17 +10,17 @@
 # 9. Site navigation
 
 # 1. Files excluded from Jekyll builds
-# exclude:
-# - README.md
-# - CODE_OF_CONDUCT.md
-# - CONTRIBUTING.md
-# - screenshot.png
-# - LICENSE
-# - CNAME
-# - Gemfile
-# - Gemfile.lock
-# - alembic-jekyll-theme.gemspec
-# - .jekyll-cache
+exclude:
+- README.md
+- CODE_OF_CONDUCT.md
+- CONTRIBUTING.md
+- screenshot.png
+- LICENSE
+- CNAME
+- Gemfile
+- Gemfile.lock
+- alembic-jekyll-theme.gemspec
+- .jekyll-cache
 
 # 2. Installed Gems
 plugins:
@@ -57,9 +57,9 @@ plugins:
 # 4. Jekyll settings
 # sass:
 #   style: compressed # Style compression
-# permalink: pretty  # Permalink style (/YYYY/MM/DD/page-name/)
-# excerpt_separator: <!-- more --> # Marks end of excerpt in posts
-# timezone: Europe/London # Timezone for blog posts and alike
+permalink: pretty  # Permalink style (/YYYY/MM/DD/page-name/)
+excerpt_separator: <!-- more --> # Marks end of excerpt in posts
+timezone: Europe/London # Timezone for blog posts and alike
 
 # 5. Collections
 collections:
