--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ navigation_header:
 - title: Semester 6
   url: /ssix/
 - title: Time table
-  url: /timetable.html/
+  url: /resorces/timetable.html
 - title: Search
   url: /search/
 
