--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ lang: en-GB # Set the site language
 title: "IT third year website" # Site name or title, also used in jekyll-seo-tag # Site logo, also used in jekyll-seo-tag
 description: "This site contains study materials and time table " # Site description and default description, also used in jekyll-seo-tag
 url: "https://alembic.darn.es" # Site url, also used in jekyll-seo-tag
-baseurl: "/thirdyear/"
+baseurl: "/2021/"
 # repo: "https://github.com/daviddarnes/alembic"
 # email: "me@daviddarnes.com"
 # disqus: "alembic-1" # Blog post comments, uncomment the option and set the site ID from your Disqus account
